--- a/MST_Effective_Spread.ipynb
+++ b/MST_Effective_Spread.ipynb
@@ -377,7 +377,9 @@
    "id": "94b2d8dc",
    "metadata": {},
    "source": [
-    "## Block method `cov([dt1, dt2, dt3], [dt4, dt5, dt6])`"
+    "## Block method \n",
+    "\n",
+    "`cov([dt1, dt2, dt3], [dt4, dt5, dt6])`"
    ]
   },
   {
@@ -397,20 +399,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "for window in windows:\n",
+    "for n_block in blocks:\n",
     "    covs = [np.nan] * len(df)\n",
     "    \n",
-    "    for i in range(len(df) - 2*window + 1):\n",
-    "        block1 = df['Diff'][i:i+window]\n",
-    "        block2 = df['Diff'][i+window:i+2*window]\n",
+    "    for i in range(len(df) - 2*n_block + 1):\n",
+    "        block1 = df['Diff'][i:i+n_block]\n",
+    "        block2 = df['Diff'][i+n_block:i+2*n_block]\n",
     "        \n",
     "        cov_val = np.abs(np.cov(block1, block2)[0, 1])\n",
     "        \n",
-    "        covs[i + 2*window - 1] = cov_val\n",
+    "        covs[i + 2*n_block - 1] = cov_val\n",
     "    \n",
-    "    df[f'Cov_{window}'] = covs\n",
-    "    df[f'Spread_{window}'] = 2 * np.sqrt(df[f'Cov_{window}'])\n",
+    "    df[f'Cov_{n_block}'] = covs\n",
+    "    df[f'Spread_{n_block}'] = 2 * np.sqrt(df[f'Cov_{n_block}'])\n",
     "\n",
     "df"
    ]
