--- a/MST_Effective_Spread.ipynb
+++ b/MST_Effective_Spread.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "17ec1aba",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "[39579 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "32fe5d72",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
        "[39572 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "984c093b",
    "metadata": {},
    "outputs": [],
@@ -394,17 +394,319 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4385efe6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>diff</th>\n",
+       "      <th>Cov_5</th>\n",
+       "      <th>Spread_5</th>\n",
+       "      <th>Cov_10</th>\n",
+       "      <th>Spread_10</th>\n",
+       "      <th>Cov_20</th>\n",
+       "      <th>Spread_20</th>\n",
+       "      <th>Cov_50</th>\n",
+       "      <th>Spread_50</th>\n",
+       "      <th>Cov_100</th>\n",
+       "      <th>Spread_100</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1609770900</td>\n",
+       "      <td>132.750000</td>\n",
+       "      <td>132.750000</td>\n",
+       "      <td>131.809997</td>\n",
+       "      <td>131.889999</td>\n",
+       "      <td>-0.919998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1609771200</td>\n",
+       "      <td>131.500000</td>\n",
+       "      <td>132.339996</td>\n",
+       "      <td>131.500000</td>\n",
+       "      <td>132.059997</td>\n",
+       "      <td>0.169998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1609771500</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.250000</td>\n",
+       "      <td>131.899993</td>\n",
+       "      <td>132.250000</td>\n",
+       "      <td>0.190003</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1609771800</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.018096</td>\n",
+       "      <td>131.520004</td>\n",
+       "      <td>131.589996</td>\n",
+       "      <td>-0.660004</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1609772100</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.089996</td>\n",
+       "      <td>131.300003</td>\n",
+       "      <td>131.448898</td>\n",
+       "      <td>-0.141098</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39567</th>\n",
+       "      <td>1672432800</td>\n",
+       "      <td>129.029998</td>\n",
+       "      <td>129.130004</td>\n",
+       "      <td>128.919998</td>\n",
+       "      <td>129.054992</td>\n",
+       "      <td>0.014999</td>\n",
+       "      <td>0.005183</td>\n",
+       "      <td>0.143989</td>\n",
+       "      <td>0.001034</td>\n",
+       "      <td>0.064309</td>\n",
+       "      <td>0.001851</td>\n",
+       "      <td>0.086049</td>\n",
+       "      <td>0.000548</td>\n",
+       "      <td>0.046804</td>\n",
+       "      <td>0.010052</td>\n",
+       "      <td>0.200519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39568</th>\n",
+       "      <td>1672433100</td>\n",
+       "      <td>129.059997</td>\n",
+       "      <td>129.399993</td>\n",
+       "      <td>129.020004</td>\n",
+       "      <td>129.380004</td>\n",
+       "      <td>0.325012</td>\n",
+       "      <td>0.010577</td>\n",
+       "      <td>0.205689</td>\n",
+       "      <td>0.000199</td>\n",
+       "      <td>0.028237</td>\n",
+       "      <td>0.001259</td>\n",
+       "      <td>0.070957</td>\n",
+       "      <td>0.000557</td>\n",
+       "      <td>0.047191</td>\n",
+       "      <td>0.010005</td>\n",
+       "      <td>0.200046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39569</th>\n",
+       "      <td>1672433400</td>\n",
+       "      <td>129.375000</td>\n",
+       "      <td>129.929992</td>\n",
+       "      <td>129.330001</td>\n",
+       "      <td>129.764404</td>\n",
+       "      <td>0.384400</td>\n",
+       "      <td>0.007774</td>\n",
+       "      <td>0.176345</td>\n",
+       "      <td>0.009258</td>\n",
+       "      <td>0.192435</td>\n",
+       "      <td>0.002945</td>\n",
+       "      <td>0.108540</td>\n",
+       "      <td>0.000333</td>\n",
+       "      <td>0.036521</td>\n",
+       "      <td>0.010244</td>\n",
+       "      <td>0.202426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39570</th>\n",
+       "      <td>1672433700</td>\n",
+       "      <td>129.764999</td>\n",
+       "      <td>129.949996</td>\n",
+       "      <td>129.619995</td>\n",
+       "      <td>129.949996</td>\n",
+       "      <td>0.185592</td>\n",
+       "      <td>0.007761</td>\n",
+       "      <td>0.176193</td>\n",
+       "      <td>0.008288</td>\n",
+       "      <td>0.182080</td>\n",
+       "      <td>0.001540</td>\n",
+       "      <td>0.078493</td>\n",
+       "      <td>0.000748</td>\n",
+       "      <td>0.054715</td>\n",
+       "      <td>0.010351</td>\n",
+       "      <td>0.203482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39571</th>\n",
+       "      <td>1672434000</td>\n",
+       "      <td>129.929992</td>\n",
+       "      <td>129.929992</td>\n",
+       "      <td>129.929992</td>\n",
+       "      <td>129.929992</td>\n",
+       "      <td>-0.020004</td>\n",
+       "      <td>0.002810</td>\n",
+       "      <td>0.106020</td>\n",
+       "      <td>0.006288</td>\n",
+       "      <td>0.158596</td>\n",
+       "      <td>0.001410</td>\n",
+       "      <td>0.075102</td>\n",
+       "      <td>0.000619</td>\n",
+       "      <td>0.049749</td>\n",
+       "      <td>0.010546</td>\n",
+       "      <td>0.205391</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>39572 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Timestamp        Open        High         Low       Close      diff  \\\n",
+       "0      1609770900  132.750000  132.750000  131.809997  131.889999 -0.919998   \n",
+       "1      1609771200  131.500000  132.339996  131.500000  132.059997  0.169998   \n",
+       "2      1609771500  132.000000  132.250000  131.899993  132.250000  0.190003   \n",
+       "3      1609771800  132.000000  132.018096  131.520004  131.589996 -0.660004   \n",
+       "4      1609772100  132.000000  132.089996  131.300003  131.448898 -0.141098   \n",
+       "...           ...         ...         ...         ...         ...       ...   \n",
+       "39567  1672432800  129.029998  129.130004  128.919998  129.054992  0.014999   \n",
+       "39568  1672433100  129.059997  129.399993  129.020004  129.380004  0.325012   \n",
+       "39569  1672433400  129.375000  129.929992  129.330001  129.764404  0.384400   \n",
+       "39570  1672433700  129.764999  129.949996  129.619995  129.949996  0.185592   \n",
+       "39571  1672434000  129.929992  129.929992  129.929992  129.929992 -0.020004   \n",
+       "\n",
+       "          Cov_5  Spread_5    Cov_10  Spread_10    Cov_20  Spread_20    Cov_50  \\\n",
+       "0           NaN       NaN       NaN        NaN       NaN        NaN       NaN   \n",
+       "1           NaN       NaN       NaN        NaN       NaN        NaN       NaN   \n",
+       "2           NaN       NaN       NaN        NaN       NaN        NaN       NaN   \n",
+       "3           NaN       NaN       NaN        NaN       NaN        NaN       NaN   \n",
+       "4           NaN       NaN       NaN        NaN       NaN        NaN       NaN   \n",
+       "...         ...       ...       ...        ...       ...        ...       ...   \n",
+       "39567  0.005183  0.143989  0.001034   0.064309  0.001851   0.086049  0.000548   \n",
+       "39568  0.010577  0.205689  0.000199   0.028237  0.001259   0.070957  0.000557   \n",
+       "39569  0.007774  0.176345  0.009258   0.192435  0.002945   0.108540  0.000333   \n",
+       "39570  0.007761  0.176193  0.008288   0.182080  0.001540   0.078493  0.000748   \n",
+       "39571  0.002810  0.106020  0.006288   0.158596  0.001410   0.075102  0.000619   \n",
+       "\n",
+       "       Spread_50   Cov_100  Spread_100  \n",
+       "0            NaN       NaN         NaN  \n",
+       "1            NaN       NaN         NaN  \n",
+       "2            NaN       NaN         NaN  \n",
+       "3            NaN       NaN         NaN  \n",
+       "4            NaN       NaN         NaN  \n",
+       "...          ...       ...         ...  \n",
+       "39567   0.046804  0.010052    0.200519  \n",
+       "39568   0.047191  0.010005    0.200046  \n",
+       "39569   0.036521  0.010244    0.202426  \n",
+       "39570   0.054715  0.010351    0.203482  \n",
+       "39571   0.049749  0.010546    0.205391  \n",
+       "\n",
+       "[39572 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "for n_block in blocks:\n",
     "    covs = [np.nan] * len(df)\n",
     "    \n",
     "    for i in range(len(df) - 2*n_block + 1):\n",
-    "        block1 = df['Diff'][i:i+n_block]\n",
-    "        block2 = df['Diff'][i+n_block:i+2*n_block]\n",
+    "        block1 = df['diff'][i:i+n_block]\n",
+    "        block2 = df['diff'][i+n_block:i+2*n_block]\n",
     "        \n",
     "        cov_val = np.abs(np.cov(block1, block2)[0, 1])\n",
     "        \n",
@@ -415,6 +717,40 @@
     "\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c94688e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "bid_ask_df = pd.DataFrame()\n",
+    "\n",
+    "for i in range(len(blocks)):\n",
+    "    bid_ask_df[f'Bid_{blocks[i]}'] = np.where(df['Diff'] > 0, df['Close'] - df[f'Spread_{blocks[i]}'], df['Close'])\n",
+    "    bid_ask_df[f'Ask_{blocks[i]}'] = np.where(df['Diff'] > 0, df['Close'], df['Close'] + df[f'Spread_{blocks[i]}'])\n",
+    "\n",
+    "bid_ask_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c194494",
+   "metadata": {},
+   "source": [
+    "## Serial covariance\n",
+    "\n",
+    "`cov([dt1, dt2, dt3], [dt4, dt5, dt6])`\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c0a5c07",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
