Serial Covariance Test

--- a/MST_Effective_Spread.ipynb
+++ b/MST_Effective_Spread.ipynb
@@ -747,10 +747,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6c0a5c07",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6527e6be",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('aapl_5m_train.csv')\n",
+    "df.drop(columns=['Unnamed: 0', 'Gmtoffset', 'Datetime', 'Volume'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "920d8e06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['diff_1'] = df['diff'].shift(1)\n",
+    "df = df.dropna().reset_index(drop=True)"
+   ]
   }
  ],
  "metadata": {
