--- a/MST_Effective_Spread.ipynb
+++ b/MST_Effective_Spread.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "1b47219a",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,8 @@
     }
    ],
    "source": [
-    "df.drop(columns=['Unnamed: 0', 'Gmtoffset', 'Datetime', 'Volume'], inplace=True)\n",
+    "df.drop(columns=['Unnamed: 0', 'Gmtoffset',\n",
+    "                 'Datetime', 'Volume'], inplace=True)\n",
     "df"
    ]
   },
@@ -468,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "4385efe6",
    "metadata": {},
    "outputs": [
@@ -777,24 +778,25 @@
    "source": [
     "for n_window in windows:\n",
     "    cov = [np.nan] * len(df_windows)\n",
-    "    \n",
+    "\n",
     "    for i in range(len(df_windows) - 2 * n_window + 1):\n",
-    "        block1 = df_windows['diff'][i:i+n_window]\n",
-    "        block2 = df_windows['diff'][i+n_window:i+2*n_window]\n",
-    "        \n",
+    "        block1 = df_windows['diff'][i:i + n_window]\n",
+    "        block2 = df_windows['diff'][i + n_window:i + 2 * n_window]\n",
+    "\n",
     "        cov_val = np.abs(np.cov(block1, block2)[0, 1])\n",
-    "        \n",
-    "        cov[i + 2*n_window - 1] = cov_val\n",
-    "    \n",
+    "\n",
+    "        cov[i + 2 * n_window - 1] = cov_val\n",
+    "\n",
     "    df_windows[f'Cov_{n_window}'] = cov\n",
-    "    df_windows[f'Spread_{n_window}'] = 2 * np.sqrt(df_windows[f'Cov_{n_window}'])\n",
+    "    df_windows[f'Spread_{n_window}'] = 2 * \\\n",
+    "                                       np.sqrt(df_windows[f'Cov_{n_window}'])\n",
     "\n",
     "df_windows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "2c94688e",
    "metadata": {},
    "outputs": [
@@ -1019,20 +1021,21 @@
     "bid_ask_df = pd.DataFrame()\n",
     "\n",
     "for i in range(len(windows)):\n",
-    "    bid_ask_df[f'Bid_{windows[i]}'] = np.where(df_windows['diff'] > 0, \n",
-    "                                              df_windows['Close'] - df_windows[f'Spread_{windows[i]}'], \n",
-    "                                              df_windows['Close'])\n",
-    "    \n",
-    "    bid_ask_df[f'Ask_{windows[i]}'] = np.where(df_windows['diff'] > 0, \n",
-    "                                              df_windows['Close'], \n",
-    "                                              df_windows['Close'] + df_windows[f'Spread_{windows[i]}'])\n",
+    "    bid_ask_df[f'Bid_{windows[i]}'] = np.where(df_windows['diff'] > 0,\n",
+    "                                               df_windows['Close'] -\n",
+    "                                               df_windows[f'Spread_{windows[i]}'],\n",
+    "                                               df_windows['Close'])\n",
+    "\n",
+    "    bid_ask_df[f'Ask_{windows[i]}'] = np.where(df_windows['diff'] > 0,\n",
+    "                                               df_windows['Close'],\n",
+    "                                               df_windows['Close'] + df_windows[f'Spread_{windows[i]}'])\n",
     "\n",
     "bid_ask_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "9f1bfd1d",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1052,8 @@
    ],
    "source": [
     "prom_spreads1 = [df_windows[f'Spread_{window}'].mean() for window in windows]\n",
-    "plt.bar([f'Spread_{window}' for window in windows], prom_spreads1, zorder=2, width=0.5)\n",
+    "plt.bar([f'Spread_{window}' for window in windows],\n",
+    "        prom_spreads1, zorder=2, width=0.5)\n",
     "\n",
     "for i, w in enumerate(prom_spreads1):\n",
     "    plt.text(i, w, f'{w:.6f}', ha='center', va='bottom', fontsize=11)\n",
@@ -1063,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "f16a85c0",
    "metadata": {},
    "outputs": [
@@ -1120,13 +1124,12 @@
    ],
    "source": [
     "for i in windows:\n",
-    "\n",
     "    bid_series = bid_ask_df[f'Bid_{i}'].tail(100)\n",
     "    ask_series = bid_ask_df[f'Ask_{i}'].tail(100)\n",
     "\n",
     "    plt.plot(bid_series.index, bid_series, label='Bid')\n",
     "    plt.plot(ask_series.index, ask_series, label='Ask')\n",
-    "    \n",
+    "\n",
     "    plt.title(f'Bid & Ask (Blocks → ventana = {i})')\n",
     "    plt.xlabel('Tiempo (últimos 100 registros)')\n",
     "    plt.ylabel('Precio')\n",
@@ -1159,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "ffa5acf4",
    "metadata": {},
    "outputs": [
@@ -1493,19 +1496,20 @@
     "df_serialco['diff_jump'] = df_serialco['diff'].shift(1)\n",
     "df_serialco = df_serialco.dropna().reset_index(drop=True)\n",
     "\n",
-    "\n",
     "df_serialco['Operation_Type'] = np.where(df_serialco['diff'] > 0, 'Ask', 'Bid')\n",
     "\n",
     "for window in windows:\n",
-    "    df_serialco[f'Cov_{window}'] = df_serialco['diff'].rolling(window=window).cov(df_serialco['diff_jump'])\n",
-    "    df_serialco[f'Spread_{window}'] = 2 * np.sqrt(np.abs(df_serialco[f'Cov_{window}']))\n",
+    "    df_serialco[f'Cov_{window}'] = df_serialco['diff'].rolling(\n",
+    "        window=window).cov(df_serialco['diff_jump'])\n",
+    "    df_serialco[f'Spread_{window}'] = 2 * \\\n",
+    "                                      np.sqrt(np.abs(df_serialco[f'Cov_{window}']))\n",
     "\n",
     "df_serialco"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "b350c16a",
    "metadata": {},
    "outputs": [
@@ -1730,20 +1734,21 @@
     "bid_ask_df = pd.DataFrame()\n",
     "\n",
     "for i in range(len(windows)):\n",
-    "    bid_ask_df[f'Bid_{windows[i]}'] = np.where(df_serialco['diff'] > 0, \n",
-    "                                              df_serialco['Close'] - df_serialco[f'Spread_{windows[i]}'], \n",
-    "                                              df_serialco['Close'])\n",
-    "    \n",
-    "    bid_ask_df[f'Ask_{windows[i]}'] = np.where(df_serialco['diff'] > 0, \n",
-    "                                              df_serialco['Close'], \n",
-    "                                              df_serialco['Close'] + df_serialco[f'Spread_{windows[i]}'])\n",
+    "    bid_ask_df[f'Bid_{windows[i]}'] = np.where(df_serialco['diff'] > 0,\n",
+    "                                               df_serialco['Close'] -\n",
+    "                                               df_serialco[f'Spread_{windows[i]}'],\n",
+    "                                               df_serialco['Close'])\n",
+    "\n",
+    "    bid_ask_df[f'Ask_{windows[i]}'] = np.where(df_serialco['diff'] > 0,\n",
+    "                                               df_serialco['Close'],\n",
+    "                                               df_serialco['Close'] + df_serialco[f'Spread_{windows[i]}'])\n",
     "\n",
     "bid_ask_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "e4651b30",
    "metadata": {},
    "outputs": [
@@ -1760,7 +1765,8 @@
    ],
    "source": [
     "prom_spreads2 = [df_serialco[f'Spread_{window}'].mean() for window in windows]\n",
-    "plt.bar([f'Spread_{window}' for window in windows], prom_spreads2, zorder=2, width=0.5)\n",
+    "plt.bar([f'Spread_{window}' for window in windows],\n",
+    "        prom_spreads2, zorder=2, width=0.5)\n",
     "\n",
     "for i, w in enumerate(prom_spreads2):\n",
     "    plt.text(i, w, f'{w:.6f}', ha='center', va='bottom', fontsize=11)\n",
@@ -1774,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "bbea89f5",
    "metadata": {},
    "outputs": [
@@ -1831,13 +1837,12 @@
    ],
    "source": [
     "for i in windows:\n",
-    "\n",
     "    bid_series = bid_ask_df[f'Bid_{i}'].tail(100)\n",
     "    ask_series = bid_ask_df[f'Ask_{i}'].tail(100)\n",
     "\n",
     "    plt.plot(bid_series.index, bid_series, label='Bid')\n",
     "    plt.plot(ask_series.index, ask_series, label='Ask')\n",
-    "    \n",
+    "\n",
     "    plt.title(f'Bid & Ask (Serial_Cov → ventana = {i})')\n",
     "    plt.xlabel('Tiempo (últimos 100 registros)')\n",
     "    plt.ylabel('Precio')\n",
