--- a/MST_Proyecto 1.ipynb
+++ b/MST_Proyecto 1.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -108,10 +108,46 @@
     "erlang = PDF_erlang(k, lmbda, So)\n",
     "\n",
     "plt.plot(So, erlang)\n",
-    "plt.title('Distribución Erlang')\n",
+    "plt.title('Distribucion de precios - Erlang')\n",
     "plt.xlabel('So')\n",
     "plt.ylabel('Dendidad de probabilidad')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ada52015",
+   "metadata": {},
+   "source": [
+    "# Expected Revenues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "905bdffd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spread = np.linspace(0, 100, 1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0278ce9",
+   "metadata": {},
+   "source": [
+    "Informed Trader → $\\prod _I$ = 0.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "401d5920",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_I = 0.4\n"
    ]
   }
  ],
