--- a/proyect2_.ipynb
+++ b/proyect2_.ipynb
@@ -467,6 +467,24 @@
    "source": [
     "active_positions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "711289fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlksmdka"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "587e1645",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
