--- a/proyect2_.ipynb
+++ b/proyect2_.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "711289fb",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
     }
    ],
    "source": [
-    "ml"
+    "mlokaskdlfkj\n"
    ]
   },
   {
